--- a/public/style.css
+++ b/public/style.css
@@ -3,6 +3,12 @@
 }
 
 body {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.emoji {
+  font-size: 70px;
 }
