--- a/public/style.css
+++ b/public/style.css
@@ -7,7 +7,8 @@
 body,
 #console,
 #screen,
-#screen-border {
+#screen-border,
+#buttons {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -49,6 +50,12 @@ h1 {
   font-size: 140px;
 }
 
+#buttons {
+    margin-bottom: -50px;
+    flex-direction: row;
+}
+
+
 #buttons button {
   background: none;
   background-color: #827ba9;
@@ -57,5 +64,5 @@ h1 {
   border-radius: 1000px;
   cursor: pointer;
   outline: inherit;
-  margin-bottom: -50px;
+  margin: 0 10px;
 }
