--- a/less/style.less
+++ b/less/style.less
@@ -1,90 +1,124 @@
+@mainColor: #5a4bb2;
+@screenColor: #ababab;
+@accentColor: #827ba9;
+
+.initFlex() {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.columnCenter() {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.outlineBorder() {
+  border: 2px solid black;
+}
+
+.basicButton() {
+  cursor: pointer;
+  outline: inherit;
+}
+
 * {
   margin: 0;
   font-family: "Press Start 2P", cursive;
   text-align: center;
 }
+
 body,
 #console,
 #screen,
 #screen-border,
 #buttons,
 #screen form {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  .initFlex();
+  .columnCenter();
 }
+
 #console {
   margin-top: 10px;
   width: 600px;
   height: 700px;
   border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%;
-  background-color: #5a4bb2;
-  border: 2px solid black;
+  background-color: @mainColor;
+  .outlineBorder();
 }
+
 #screen {
-  background-color: #ababab;
+  background-color: @screenColor;
   border-radius: 20px;
   width: 300px;
   height: 325px;
 }
+
 #screen-border {
-  border: 2px solid black;
-  background-color: #827ba9;
+  .outlineBorder();
+  background-color: @accentColor;
   border-radius: 20px;
   width: 325px;
   height: 350px;
   margin-bottom: 30px;
 }
+
 h1 {
   font-size: 2rem;
   margin-bottom: 40px;
 }
+
 .emoji {
   font-size: 140px;
 }
+
 #buttons {
   margin-bottom: -50px;
   flex-direction: row;
 }
+
 #buttons button {
-  cursor: pointer;
-  outline: inherit;
-  background-color: #827ba9;
+  .basicButton();
+  background-color: @accentColor;
   height: 75px;
   width: 75px;
   border-radius: 1000px;
   margin: 0 10px;
 }
+
 #faq-text {
   overflow: scroll;
   padding: 5px 15px;
 }
+
 #faq-text p {
   text-align: left;
   line-height: 1.5em;
 }
+
 #name-input {
   width: 150px;
   padding: 5px;
   margin-bottom: 10px;
 }
+
 #screen form button {
   padding: 5px;
 }
+
 ul {
   padding: 0;
   list-style-type: none;
 }
+
 ul form button {
-  cursor: pointer;
-  outline: inherit;
+  .basicButton();
   background-color: transparent;
   width: 225px;
   height: 40px;
   font-size: 25px;
 }
+
 li {
   margin: 10px 0;
 }
