Add box shadow to console

--- a/less/style.less
+++ b/less/style.less
@@ -45,6 +45,7 @@ body,
   border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%;
   background-color: @mainColor;
   .outlineBorder();
+  box-shadow: 10px 5px 10px black;
 }
 
 #screen {
