--- a/public/style.css
+++ b/public/style.css
@@ -22,6 +22,7 @@ body,
   border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%;
   background-color: #5a4bb2;
   border: 2px solid black;
+  box-shadow: 10px 5px 10px black;
 }
 #screen {
   background-color: #ababab;
