Add death functionality

--- a/less/style.less
+++ b/less/style.less
@@ -48,6 +48,10 @@ body,
   box-shadow: 10px 5px 10px black;
 }
 
+button {
+  font-size: 100%;
+}
+
 #screen {
   background-color: @screenColor;
   border-radius: 20px;
@@ -117,7 +121,8 @@ ul form button {
   background-color: transparent;
   width: 225px;
   height: 40px;
-  font-size: 25px;
+  font-size: 20px;
+  padding: 2px;
 }
 
 li {
