--- a/public/style.css
+++ b/public/style.css
@@ -24,6 +24,9 @@ body,
   border: 2px solid black;
   box-shadow: 10px 5px 10px black;
 }
+button {
+  font-size: 100%;
+}
 #screen {
   background-color: #ababab;
   border-radius: 20px;
@@ -84,7 +87,8 @@ ul form button {
   background-color: transparent;
   width: 225px;
   height: 40px;
-  font-size: 25px;
+  font-size: 20px;
+  padding: 2px;
 }
 li {
   margin: 10px 0;
